<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_task_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_task_description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonUpdateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_task" />

</LinearLayout>